# wd-squads

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml  tests.yml  update.yml
config/: teams.yaml
docs/: data.json  index.html
reports/: Q101959-borussia-mönchengladbach.md  Q104761-bayer-04-leverkusen.md  Q104770-1-fc-köln.md  Q105254-1-fsv-mainz-05.md  Q106394-sc-freiburg.md  Q1128631-leeds-united-fc.md  Q1130849-liverpool-fc.md  Q130302376-csm-târgu-jiu.md  Q136398-zsc-lions.md  Q141971-1-fc-union-berlin.md  Q15789-fc-bayern-münchen.md  Q160532-sc-paderborn-07.md  Q162449-1-ffc-frankfurt.md  Q18656-manchester-united-fc.md  Q18708-fulham-fc.md  Q187091-fc-wil.md  Q18711-aston-villa-fc.md  Q18716-newcastle-united-fc.md  Q18739-sunderland-afc.md  Q18741-tottenham-hotspur-fc.md  Q189671-fc-basel.md  Q190526-bsc-young-boys.md  Q19453-brighton-hove-albion-fc.md  Q19467-crystal-palace-fc.md  Q19477-hull-city-afc.md  Q19490-nottingham-forest-fc.md  Q19568-afc-bournemouth.md  Q19571-brentford-fc.md  Q19580-coventry-city-fc.md  Q201360-grasshopper-club-zürich.md  Q206692-fc-zürich.md  Q216773-fc-vaduz.md  Q219235-servette-fc-genève.md  Q223262-fc-luzern.md  Q22707-tsg-1899-hoffenheim.md  Q3063128-fc-neuchâtel.md  Q309456-fc-lausanne-sport.md  Q321061-fc-sion.md  Q32494-fc-schalke-04.md  Q33699-fribourg-gottéron.md  (+26 more)
src/wd_squads/: __init__.py  __main__.py  app.py  config.py  diff.py  models.py  (+4 more)
tests/: conftest.py  test_config.py  test_diff.py  test_http_client.py  test_pipeline.py  test_wikidata.py  test_wikipedia_parse.py
(+16 files in other folders)
